[tool.poetry]
name = "streamlit-custom-filters"
version = "0.1.1"
description = "Streamlit tools for interactive dataframes filtering"
authors = ["Edward Malov <edwardmalov@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/wowMalow/streamlit-custom-filters"
repository = "https://github.com/wowMalow/streamlit-custom-filters"
documentation = "https://wowmalow.github.io/streamlit-custom-filters/"
keywords = [
    "streamlit",
    "components",
]
packages = [
    { include = "streamlit-custom-filters", from = "." },
]


[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.29.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^1.25.2"
myst-parser = "^2.0.0"
ghp-import = "^2.1.0"
docutils = "^0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
